# veia-unilever-deteccion_casco

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
deteccion_casco/: model.py  test.py
