[tool.poetry]
name = "deteccion_casco"
version = "0.1.0"
description = ""
authors = ["JesusVazquez <jmvazqueznicolas@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
opencv-contrib-python = "^4.5.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
